# synthid-text

./: README.md  pyproject.toml  requirements.txt
notebooks/: synthid_text_huggingface_integration.ipynb  testing_huggingface_integration.ipynb
src/synthid_text/: detector_bayesian.py  detector_mean.py  g_value_expectations.py  hashing_function.py  logits_processing.py  logits_processing_test.py  synthid_mixin.py  synthid_mixin_test.py  torch_testing.py
